<resources>
    <string name="app_name">Arithmetic Skill Test</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="message">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.</string>
    <string name="student_name">Student Name: Rusini Thara Gunarathne</string>
    <string name="student_id">Student ID: 20200205</string>
    <string name="greater_btn">Greater</string>
    <string name="less_btn">Less</string>
    <string name="equals_btn">==</string>
    <string name="right_exp">right</string>
    <string name="left_exp">left</string>
    <string name="correct_guesses">Correct Guesses:</string>
    <string name="final_results">-Final Results-</string>
    <string name="game_over">Game Over!</string>
    <string name="display_correct_guesses" />
    <string name="wrong_guesses">Wrong Guesses:</string>
    <string name="display_wrong_guesses" />
    <string name="timer">50</string>
    <string name="result">TextView</string>
    <string name="close">Close</string>
    <string name="author_details">Author Details</string>
    <string name="land_close">Close</string>
    <string name="land_author_details">Author Details</string>

</resources>